White space fixed

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -108,7 +108,6 @@ a:active {
   display: flex;
   margin: auto;
   padding: 20px;
-  width: 100%;
   max-width: 100%;
   border-bottom: 1px solid white;
   background-color: #333570;
@@ -165,8 +164,8 @@ nav.page-header__item a::after {
 
 nav.page-header__item a::before {
   top: auto;
-  -webkit-transform: translateX(500px);
-  transform: translateX(500px);
+  -webkit-transform: translateX(100px);
+  transform: translateX(100px);
 }
 
 nav.page-header__item a::after {
